<resources>
    <string name="app_name">Control Activities UTFPR</string>
    <string name="pontagrossa">Ponta Grossa</string>
    <string name="patobranco">Pato Branco</string>
    <string name="santahelena">Santa Helena</string>
    <string name="toledo">Toledo</string>
    <string name="selecioneperiodo">" Select Period"</string>
    <string name="terceiro">" Third"</string>
    <string name="primeiro">" First"</string>
    <string name="segundo">" Second"</string>
    <string name="checkaluno">" CheckStudent"</string>
    <string name="aluno">" Student"</string>
    <string name="tres">" 3rd Period"</string>
    <string name="um">1rd Period</string>
    <string name="dois">" 2rd Period"</string>
    <string name="professo">" Professed"</string>
    <string name="professores">" Teacher"</string>
    <string name="erro_nome">" Name cannot be empty"</string>
    <string name="erro_nomes">" ErrorName"</string>
    <string name="limpacampos">" Clean Fields"</string>
    <string name="limpacampo">" cleancamp"</string>
    <string name="selecion">" he was"</string>
    <string name="nenhumperio">" noperiod"</string>
    <string name="monitor">Monitor</string>
    <string name="novo_cadastro">" new cad"</string>
    <string name="erro_tipo_nao_selecionado">" MISTAKE"</string>
    <string name="erro_campus_vazio">" empty campus error"</string>
    <string name="erro_nome_vazio">" empty name"</string>
    <string name="Sobre">sobre</string>
    <string name="bacharelado">" Bachelor Degree"</string>
    <string name="licenciatura">" Graduation"</string>
    <string name="nenhuma_modalidade">No Modality Selected</string>
    <string name="tecnologo">" Technologist"</string>
    <string name="salvarm">Save</string>
    <string name="modalidade_vazia">" Empty Mode!"</string>
    <string name="periodo_vazio">" Period cannot be empty!"</string>
    <string name="discplina_vazio">" Discipline cannot be empty!!"</string>
    <string name="campus_vazio">" Empty Campus!"</string>
    <string name="tela_novo_cadastro">New Register</string>
    <string name="alterar_cadastro">" Change Registration"</string>
    <string name="disciplina">Subject</string>
    <string name="periodos">" Period"</string>
    <string name="selecione_o_tipo_do_curso">" Select Course Type"</string>
    <string name="bacharelados">" Bachelor Degree"</string>
    <string name="licenciaturas">" Graduation"</string>
    <string name="tecnologos">" Technologist"</string>
    <string name="selecione_uma_opcaos">" Select an option"</string>
    <string name="monitors">Monitor</string>
    <string name="nome_completo">" Full name"</string>
    <string name="selecione_o_campus">" Select Campus"</string>
    <string name="selecione">" Select"</string>
    <string name="apucarana">Apucarana</string>
    <string name="campomourao">Campo Mourão</string>
    <string name="cornelio">Cornélio Procópio</string>
    <string name="curitiba">Curitiba</string>
    <string name="doisvizinhos">Dois Vizinhos</string>
    <string name="francisco">Francisco Beltrão</string>
    <string name="guarapuava">Guarapuava</string>
    <string name="londrina">Londrina</string>
    <string name="medianeira">Medianeira</string>
    <string name="professor">" Teacher"</string>
    <string name="aplicativo_para_controle_de_atividades_da_utfpr">" Application for Control of UTFPR Activities"</string>
    <string name="autor_al_cio_l_medeiros">Author: Alécio L. Medeiros</string>
    <string name="vers_o_1_0">" Version 1.0"</string>
    <string name="Control">Control Activities</string>
    <string name="email">Email: Alecio.medeiros@alunos.utfpr.edu.br</string>
    <string name="description">Description: Application to control activities and tests of UTFPR subjects</string>
    <string name="deseja_apagar">Do you want to Erase?</string>
    <string name="campus_ja_cadastrado">Campus name already registered</string>
    <string name="save">save</string>
    <string name="cancel">cancel</string>
    <string name="abrir">abrir</string>
    <string name="apagar">Delete</string>
    <string name="novos">New</string>
    <string name="cadastro_alterar">Change Registration</string>
    <string name="novo_campus">" New Campus"</string>
    <string name="alterar_campus">" Change Campus"</string>
    <string name="campus_em_uso">" Campus is in use, cannot be deleted!"</string>
    <string name="erro">Error</string>
    <string name="sim">Yes</string>
    <string name="nao">No</string>
    <string name="confirmacao">Confirmation</string>
    <string name="ok">OK</string>
    <string name="disc_vazia">" Empty Discipline!"</string>
    <string name="campus_title">Campus</string>
    <plurals name="datas">Date
        <item quantity="one">%d year.</item>
        <item quantity="other">%d years.</item>
    </plurals>
    <string name="cadastro_novo">" New Register"</string>
    <string name="novo_c_mpus">New Campus</string>
    <string name="date">Date</string>
    <string name="data_registro">Data Record</string>
    <string name="abrir_edit">Open</string>
    <string name="apagar_edit">Delete</string>
</resources>