<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scroll_view_controle"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ControleActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/disciplina" />

        <EditText
            android:id="@+id/editTextNome"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="28dp"
            android:ems="10"
            android:inputType="textPersonName|textCapWords" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/periodos" />

        <EditText
            android:id="@+id/editTextPeriodo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="28dp"
            android:ems="10"
            android:inputType="textPersonName|textCapWords" />

        <TextView
            android:id="@+id/Data"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="19dp"
            android:text="@string/date" />

        <EditText
            android:id="@+id/editTextData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="28dp"
            android:ems="10"/>

        <TextView
            android:id="@+id/textViewPeriodo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:text="@string/selecione_o_campus" />

        <Spinner
            android:id="@+id/spinnerCampus"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"/>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="19dp"
            android:text="@string/selecione_o_tipo_do_curso" />

        <RadioGroup
            android:id="@+id/radioGroupPeriodos"
            android:layout_width="381dp"
            android:layout_height="179dp"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="15dp"
            android:layout_marginRight="8dp">

            <RadioButton
                android:id="@+id/radioButtonPrimeiro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/bacharelados" />

            <RadioButton
                android:id="@+id/radioButtonSegundo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/licenciaturas" />

            <RadioButton
                android:id="@+id/radioButtonTerceiro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/tecnologos" />


        </RadioGroup>

        <TextView
            android:id="@+id/textViewTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="1dp"
            android:text="@string/selecione_uma_opcaos" />

        <CheckBox
            android:id="@+id/checkBoxAluno"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/aluno" />

        <CheckBox
            android:id="@+id/checkBoxMonitor"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:text="@string/monitors" />

        <TextView
            android:id="@+id/textViewDataCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginTop="40dp"
            android:text="@string/data_registro" />

        <EditText
            android:id="@+id/editTextDataCadastro"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="28dp"
            android:ems="10"
            android:inputType="textPersonName" />

    </LinearLayout>
</ScrollView>
